--- a/[ESTUDO] JavaScript na Web - Forms e HTML5/cadastro.html
+++ b/[ESTUDO] JavaScript na Web - Forms e HTML5/cadastro.html
@@ -23,7 +23,7 @@
             <form action="./cadastro_concluido.html" class="formulario flex flex--coluna">
                 <fieldset>
                     <legend class="formulario__legenda">Informações básicas</legend>
-                    <div class="input-container">
+                    <div class="input-container input-container--invalido">
                         <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required>
                         <label class="input-label" for="nome">Nome</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
@@ -34,7 +34,9 @@
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
                     <div class="input-container">
-                        <input name="senha" id="senha" class="input" type="password" placeholder="Senha" pattern="^(?=.*[A-Z])(?=.*\d).{6,12}$" required>
+                        <input name="senha" id="senha" class="input" type="password" placeholder="Senha" 
+                        pattern="^(?=.*[A-Z])(?=.*\d).{6,12}$" title="A senha deve conter entre 6 e 12 
+                        caracteres, deve conter pelo menos uma letra maiúscula, um número e não deve conter símbolos." required>
                         <label class="input-label" for="senha">Senha</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
@@ -42,7 +44,7 @@
                 <fieldset>
                     <legend class="formulario__legenda">Informações pessoais</legend>
                     <div class="input-container">
-                        <input name="nascimento" id="nascimento" class="input" type="text" placeholder="Data de nascimento">
+                        <input name="nascimento" id="nascimento" class="input" type="date" placeholder="Data de nascimento" data-tipo="dataNascimento" required>
                         <label class="input-label" for="nascimento">Data de nascimento</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
@@ -79,5 +81,6 @@
             </form>
         </section>
     </main>
+    <script src="./assets/js/app.js" type="module"></script>
 </body>
 </html>
